--- a/samples/Blazor/wwwroot/css/app.css
+++ b/samples/Blazor/wwwroot/css/app.css
@@ -62,3 +62,208 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+ul.search-results {
+    list-style-type: none;
+    padding: 0;
+}
+
+    ul.search-results li {
+        cursor: pointer;
+    }
+
+    ul.search-results li.selected {
+        background: #DDD;
+    }
+
+    ul.search-results li:hover {
+        background: #EEE;
+    }
+
+
+    ul.search-results li span:first-of-type {
+        color: #0071c1;
+    }
+
+    ul.search-results li span:last-of-type {
+        font-size: 0.8em;
+    }
+
+pre {
+    max-width: calc(100vw - 250px);
+}
+
+.result-content {
+    border: 1px solid #CCC;
+    background: #EEE;
+    margin: 0 1em 1em 0;
+    padding: 0 1em;
+    border-radius: 1em;
+}
+
+.word-matches {
+    max-width: 150px;
+    width: 150px;
+    min-width: 150px;
+    font-size: 0.9em;
+}
+
+.btn.tab {
+    border-end-end-radius: 0 !important;
+    border-end-start-radius: 0 !important;
+}
+
+.tab-content {
+    border-top: 1px solid #1b6ec2;
+    padding-top: 1rem;
+}
+
+.index-node-header {
+    display: flex;
+    flex-direction: row;
+    gap: 0.2rem;
+    align-items: center;
+}
+
+    .index-node-header > span:first-of-type {
+        font-size: 0.8rem;
+        margin: 0 0.5rem;
+    }
+
+    .index-node-header button {
+        border-radius: 50%;
+        max-width: 2em;
+        max-height: 2em;
+        min-width: 2em;
+        min-height: 2em;
+        margin: 0.2em;
+        font-size: 0.7rem;
+        border: 1px solid #444;
+    }
+
+    .index-node-header button:disabled {
+        visibility: hidden;
+    }
+
+.index-node-children ul li {
+    list-style-type: none;
+}
+
+.execution-plan .node {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0.4rem;
+    flex: 1 1 auto;
+}
+
+.execution-plan .info {
+    border-radius: 10px;
+    min-width: 1.5em;
+    display: inline-block;
+    text-align: center;
+    font-size: 0.9rem;
+    padding: 0 0.4em;
+}
+
+.execution-plan .node-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
+}
+
+    .execution-plan .node-header .info.result-count {
+        background-color: darkgreen;
+        color: white;
+        margin-right: 0.2rem;
+    }
+
+        .execution-plan .node-header .info.result-count::before {
+            content: '\e00d';
+            font-family: 'Icons';
+            color: white;
+            font-size: 0.8em;
+        }
+
+    /* special styling for operators to connect them to their child nodes */
+    .execution-plan .node-header.operator {
+        background: #CCC;
+        padding: 0.2rem;
+        border: 2px solid black;
+        z-index: 2;
+        right: -2px;
+        border-right: 0;
+    }
+
+    /* The main row of information in the node header */
+    .execution-plan .node-header .node-info .primary {
+        font-size: 0.8rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+        .execution-plan .node-header .node-info .primary .execution-order {
+            margin-right: 0.2em;
+        }
+
+        .execution-plan .node-header .node-info .primary .node-name {
+            font-weight: bold;
+            color: #1861ac;
+            margin: 0 0.4em;
+        }
+
+    /* Adjust the color of the text */
+    .execution-plan .node-header.operator .node-info .primary .node-name {
+        color: #1861ac;
+    }
+
+    .execution-plan .node-header .node-info .primary svg {
+        width: 20px;
+        height: 20px;
+        max-width: 20px;
+        max-height: 20px;
+    }
+
+    .execution-plan .node-header .node-info .primary span:last-of-type {
+        font-size: 0.8em;
+        margin-left: 0.2rem;
+    }
+
+    .execution-plan .node-header .node-info {
+        display: flex;
+        flex-direction: column;
+        margin-left: 0.5em;
+        align-items: flex-start;
+        font-size: 0.6rem;
+    }
+
+.execution-plan .node .node-children {
+    position: relative;
+    border-left: 2px solid;
+    border-radius: 2px;
+    padding: 0.3rem;
+    background: #80808033;
+    mix-blend-mode: multiply;
+    display: flex;
+    flex-direction: column;
+}
+
+    .execution-plan .node .node-children::before,
+    .execution-plan .node .node-children::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        width: 10px;
+        height: 2px;
+        background: black;
+    }
+
+    .execution-plan .node .node-children::before {
+        top: 0;
+    }
+
+    .execution-plan .node .node-children::after {
+        bottom: 0;
+    }
