Remove styles altogether

--- a/samples/Blazor/Pages/Index.razor
+++ b/samples/Blazor/Pages/Index.razor
@@ -110,6 +110,10 @@
     {
         <Blazor.Shared.ExampleSearches />
     }
+
+    @* <pre>
+        @this.IndexService.GetIndexTextualRepresentation()
+</pre> *@
 </div>
 
 
