Update query plan

--- a/samples/Blazor/Shared/ExampleSearches.razor
+++ b/samples/Blazor/Shared/ExampleSearches.razor
@@ -7,8 +7,8 @@
         <dd>The word "critical" when it appears before and near to the word "acclaim"</dd>
         <dt>st* & sp*</dt>
         <dd>The document must contain words starting with "st" and "sp"</dd>
-        <dt>fight | thrones</dt>
-        <dd>Documents containing words deriving from "fight" or "thrones" (Word stemming is enabled)</dd>
+        <dt>throne &! game</dt>
+        <dd>Documents containing "throne", but not "game"</dd>
         <dt>"san ti"</dt>
         <dd>Returns pages containing "Sān tǐ", demonstrating accent insensitivity searching.</dd>
         <dt>%%%m</dt>
