--- a/samples/Blazor/Pages/ExecutionPlanNode.razor
+++ b/samples/Blazor/Pages/ExecutionPlanNode.razor
@@ -19,6 +19,9 @@
                     case QueryExecutionPlanNodeKind.PrecedingIntersect:
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>set-center</title><path d="M9,5A7,7 0 0,0 2,12A7,7 0 0,0 9,19C10.04,19 11.06,18.76 12,18.32C12.94,18.76 13.96,19 15,19A7,7 0 0,0 22,12A7,7 0 0,0 15,5C13.96,5 12.94,5.24 12,5.68C11.06,5.24 10.04,5 9,5M9,7C9.34,7 9.67,7.03 10,7.1C8.72,8.41 8,10.17 8,12C8,13.83 8.72,15.59 10,16.89C9.67,16.96 9.34,17 9,17A5,5 0 0,1 4,12A5,5 0 0,1 9,7M15,7A5,5 0 0,1 20,12A5,5 0 0,1 15,17C14.66,17 14.33,16.97 14,16.9C15.28,15.59 16,13.83 16,12C16,10.17 15.28,8.41 14,7.11C14.33,7.04 14.66,7 15,7Z" /></svg>
                         break;
+                    case QueryExecutionPlanNodeKind.Except:
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>set-left</title><path d="M 7.31 -0.142 C 8.35 -0.142 9.37 0.098 10.31 0.538 C 11.25 0.098 12.27 -0.142 13.31 -0.142 C 17.176 -0.142 20.31 2.992 20.31 6.858 C 20.31 10.724 17.176 13.858 13.31 13.858 C 12.27 13.858 11.25 13.618 10.31 13.178 C 9.37 13.618 8.35 13.858 7.31 13.858 C 3.444 13.858 0.31 10.724 0.31 6.858 C 0.31 2.992 3.444 -0.142 7.31 -0.142 M 18.845 7.041 C 18.937 4.027 17.263 1.617 13.306 1.696 C 9.875 1.764 7.964 4.684 8.066 7.063 C 8.219 10.649 10.911 12.087 13.26 12.157 C 15.777 12.232 18.753 10.055 18.845 7.041 Z" /></svg>
+                        break;
                 }
 
                 <span class="node-name">@nodeText</span>
@@ -71,6 +74,7 @@
             QueryExecutionPlanNodeKind.QueryPart => Node.Text,
             QueryExecutionPlanNodeKind.Intersect => "Intersect",
             QueryExecutionPlanNodeKind.Union => "Union",
+            QueryExecutionPlanNodeKind.Except => "Except",
             QueryExecutionPlanNodeKind.PositionalIntersect => $"Positional intersect {Node.Text}",
             QueryExecutionPlanNodeKind.PrecedingIntersect => "Preceding intersect",
             QueryExecutionPlanNodeKind.ResultsOnly => "Query executed without plan recorded",
